# GreenWings

./: .env.example  .gitignore  IMPLEMENTATION_NOTES.md  PROJECT_CLEANUP_PLAN.md  PROJECT_CLEANUP_REPORT.md  PROJECT_STRUCTURE.md  README.md  START_DEV_SERVER.cmd  START_TUNNEL_DEMO.cmd  TUNNEL_DEMO_GUIDE.md  index.html  migrate.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
archive/debug-files/: extract.py
database/: company_content_postgres.sql  dump.sql  dump_fixed.sql  fertilizers_postgres.sql  fetch_table.py  greenwings_maharashtra_seed.sql  subtypes.csv
database/backups/: greenwings-before-gw-migration-20260628-021724.db  greenwings-before-new-table-switch-20260628-025140.db  greenwings-before-new-table-switch-20260628-025419.db  greenwings-before-normalized-crop-categories-20260628-035335.db  greenwings-before-normalized-crop-categories-20260628-040943.db  greenwings-before-normalized-crop-categories-20260628-041033.db
database/sps/: crop.csv  main.py  produce.csv  produce_202606291941.csv
docs/: crop-variety-r2-image-sync.md  greenwings-crop-er-diagram.md
docs/diagrams/: README_DIAGRAM_SNIPPET.md
prisma/: schema.prisma
public/resources/: city-compost-guide.txt  haifa-multik-specification.txt  neem-coated-urea-guide.txt  yaramila-product-specification.txt
server/: README.md  __init__.py  import_seed.py  run_api.py  server.py
server/app/: __init__.py  config.py  database.py  legacy.py  main.py  models.py  schemas.py
server/migrations/: __init__.py  migrate_catalog_to_new_tables.py  (+2 more)
src/: App.tsx  index.css
(+86 files in other folders)
