[project]
name = "greenwings-backend"
version = "0.1.0"
description = "FastAPI backend for the GreenWings website and member portal."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.30",
  "pydantic>=2.7.0",
  "email-validator>=2.1.0",
  "boto3>=1.34.0",
  "python-dotenv>=1.0.1",
  "tomli>=2.0.1; python_version < '3.11'",
]

[tool.greenwings]
api_host = "127.0.0.1"
api_port = 8787
database_url = "sqlite:///database/greenwings.db"

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.2.0",
]

[tool.uvicorn]
factory = false
host = "127.0.0.1"
port = 8787
